--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -29,8 +29,8 @@ jobs:
                   context: .
                   push: true
                   tags: |
-                      ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
-                      ${{ secrets.DOCKERHUB_USERNAME }}/app:${{ github.sha }}
+                      ${{ secrets.DOCKERHUB_USERNAME }}/ploy:latest
+                      ${{ secrets.DOCKERHUB_USERNAME }}/ploy:${{ github.sha }}
 
             - name: Deploy via SSH
               uses: appleboy/ssh-action@v1.0.3
@@ -40,7 +40,7 @@ jobs:
                   key: ${{ secrets.SSH_PRIVATE_KEY }}
                   script: |
                       echo 'Deploying to server...'
-                      sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app:${{ github.sha }}
+                      sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/ploy:${{ github.sha }}
                       sudo docker stop app || true
                       sudo docker rm app || true
-                      sudo docker run -d --name app -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/app:${{ github.sha }}
+                      sudo docker run -d --name app -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/ploy:${{ github.sha }}
